[build-system]
requires = ["setuptools >= 65", "wheel"]

[project]
name = "bsrt"
version = "0.1.0"
description = "Multi-frame super-resolution tool"
authors = [{ name = "Ziwei Luo", email = "ziwei.ro@gmail.com" }]
maintainers = [
    { name = "Ziwei Luo", email = "ziwei.ro@gmail.com" },
    { name = "Connor Baker", email = "connorbaker01@gmail.com" },
]
readme = "README.md"
urls = { homepage = "https://github.com/connorbaker/bsrt" }
requires-python = ">=3.10"
dependencies = [
    "mfsr_utils @ git+https://github.com/ConnorBaker/mfsr_utils.git",
    "torch==2.0.0.*",
    "torchvision==0.15.0.*",
    "opencv-python-headless==4.6.0.66",
    "pytorch-lightning==1.8.5.post0",
    "torchmetrics[image]==0.11.0",
    "wandb==0.13.7",
]

[project.optional-dependencies]
tune = [
    "syne-tune[gpsearchers] @ git+https://github.com/awslabs/syne-tune.git@f55b4fb54cec21aac3e0417714eded890cd59c37",
]
lint = ["black==22.12.0", "flake8==6.0.0", "isort==5.11.3"]
typecheck = ["pyright==1.1.285", "mypy==0.991"]
test = [
    "pytest==7.2.0",
    "pytest-xdist==3.1.0",
    "hypothesis==6.61.0",
    "hypothesis_torch_utils @ git+https://github.com/ConnorBaker/hypothesis_torch_utils.git",
]

[tool.setuptools]
include-package-data = true
package-dir = { bsrt = "bsrt" }
package-data = { bsrt = ["py.typed"] }

[tool.black]
line-length = 99
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 99
py_version = "39" # 3.10 isn't supported yet

[tool.mypy]
python_version = "3.10"
platform = "linux"
strict = true
# mypy_path = "$MYPY_CONFIG_FILE_DIR/typings"
warn_unused_ignores = false # Pyright catches different things than mypy

[tool.pyright]
include = ["./bsrt"]
pythonVersion = "3.10"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
