[build-system]
requires = ["setuptools >= 65", "wheel"]

[project]
name = "bsrt"
version = "0.1.0"
description = "Multi-frame super-resolution tool"
authors = [{ name = "Ziwei Luo", email = "ziwei.ro@gmail.com" }]
maintainers = [
    { name = "Ziwei Luo", email = "ziwei.ro@gmail.com" },
    { name = "Connor Baker", email = "connorbaker01@gmail.com" },
]
readme = "README.md"
urls = { homepage = "https://github.com/connorbaker/bsrt" }
requires-python = ">=3.10"
dependencies = [
    # See https://github.com/ConnorBaker/mfsr_utils
    "mfsr_utils",
    "torch",
    "torchvision",
    "filelock>=3.9",
    "opencv>=4.7.0",
    "pytorch-lightning>=1.8.6",
    # See https://github.com/ercanburak/PerceptualSimilarity
    "lpips",
    "torchmetrics>=0.11.0",
    "wandb>=0.13.7",
]

[project.optional-dependencies]
tune = [
    # See https://github.com/awslabs/syne-tune
    "syne-tune[gpsearchers]",
]
lint = ["black>=22.12.0", "flake8>=6.0.0", "isort>=5.11.4"]
typecheck = ["pyright>=1.1.286", "mypy>=0.991"]
test = [
    "pytest>=7.2.0",
    "pytest-xdist>=3.1.0",
    "hypothesis>=6.61.0",
    # See https://github.com/ConnorBaker/hypothesis_torch_utils
    "hypothesis_torch_utils",
]

[tool.setuptools]
include-package-data = true
package-dir = { bsrt = "bsrt" }
package-data = { bsrt = ["py.typed"] }

[tool.black]
line-length = 99
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 99
py_version = "39" # 3.10 isn't supported yet

[tool.mypy]
python_version = "3.10"
platform = "linux"
strict = true
# mypy_path = "$MYPY_CONFIG_FILE_DIR/typings"
warn_unused_ignores = false # Pyright catches different things than mypy

[tool.pyright]
include = ["./bsrt"]
pythonVersion = "3.10"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
