[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bsrt"
version = "0.1.0"
description = "Multi-frame super-resolution tool"
authors = [{ name = "Ziwei Luo", email = "ziwei.ro@gmail.com" }]
maintainers = [
    { name = "Ziwei Luo", email = "ziwei.ro@gmail.com" },
    { name = "Connor Baker", email = "connorbaker01@gmail.com" },
]
urls.homepage = "https://github.com/connorbaker/bsrt"
requires-python = ">=3.10"
dependencies = [
    # See https://github.com/ConnorBaker/mfsr_utils
    "mfsr_utils",
    "torch",
    "torchvision",
    "filelock>=3.9",
    "opencv>=4.7.0",
    "pydantic>=2.0.0",
    "pytorch-lightning>=1.8.6",
    # See https://github.com/awslabs/syne-tune
    "syne-tune[gpsearchers]",
    # See https://github.com/ercanburak/PerceptualSimilarity
    "lpips",
    "torchmetrics>=0.11.0",
    "wandb>=0.13.7",
]

[project.optional-dependencies]
dev = [
    # Lint
    "black>=22.12.0",
    "ruff>=0.3.0",
    # Typecheck
    "mypy>=0.991",
]

[project.scripts]
bsrt = "bsrt.__main__:main"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
]
line-length = 120

[tool.mypy]
python_version = "3.10"
platform = "linux"
strict = true
warn_unused_ignores = false # Pyright catches different things than mypy

[tool.pyright]
include = ["./bsrt"]
pythonVersion = "3.10"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
